--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<h1>Morgan Byers</h1>
+<br/>
+<h2>Contact:</h2>
+<p><strong>email <strong> <a href="mailto:m_byers@txstate.edu">m_byers@txstate.edu</a></p>
+<br/>
+<h2>Portfolio:</h2>
+<p>Most of my time is spent working on projects for my classes or for the IMICS lab at Texas State University. If you are a Texas State student or faculty member, you may <a href="https://git.txstate.edu/meb298">access the work that I do on behalf of Texas State here.</a></p>
+<p>In my free time, I work on scraps of projects here and there. You can find my personal work on <a href="https://github.com/mbyers31">my personal Github account.</a></p>
