Added required bootstrap tags

--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
-<h1>Morgan Byers</h1>
-<br/>
-<h2>Contact:</h2>
-<p><strong>email <strong> <a href="mailto:m_byers@txstate.edu">m_byers@txstate.edu</a></p>
-<br/>
-<h2>Portfolio:</h2>
-<p>Most of my time is spent working on projects for my classes or for the IMICS lab at Texas State University. If you are a Texas State student or faculty member, you may <a href="https://git.txstate.edu/meb298">access the work that I do on behalf of Texas State here.</a></p>
-<p>In my free time, I work on scraps of projects here and there. You can find my personal work on <a href="https://github.com/mbyers31">my personal Github account.</a></p>
-<br/>
-  <h2>Resume</h2>
-  <p><a href='Byers Resume 2020.pdf'>You can download a copy of my resume here.</a></p>
+<!doctype html>
+<html lang="en">
+  
+   <head>
+     <!-- Required meta tags -->
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <!--Bootstrap CSS-->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+     
+     <title>Morgan Byers</title>
+   </head>
+
+   <body>
+     <h1>Morgan Byers</h1>
+     <br/>
+     <h2>Contact:</h2>
+     <p><strong>email <strong> <a href="mailto:m_byers@txstate.edu">m_byers@txstate.edu</a></p>
+     <br/>
+     <h2>Portfolio:</h2>
+     <p>Most of my time is spent working on projects for my classes or for the IMICS lab at Texas State University. If you are a Texas State student or faculty member, you may <a href="https://git.txstate.edu/meb298">access the work that I do on behalf of Texas State here.</a></p>
+     <p>In my free time, I work on scraps of projects here and there. You can find my personal work on <a href="https://github.com/mbyers31">my personal Github account.</a></p>
+     <br/>
+     <h2>Resume</h2>
+     <p><a href='Byers Resume 2020.pdf'>You can download a copy of my resume here.</a></p>
+  
+     <!--Bootstrap JS-->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+   </body>
+  
+</html>
