--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <!--Bootstrap CSS-->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+     <!--Custom CSS-->
+     <a href="custom.css" rel="stylesheet">
      
      <title>Morgan Byers</title>
    </head>
@@ -22,7 +24,7 @@
      <p>In my free time, I work on scraps of projects here and there. You can find my personal work on <a href="https://github.com/mbyers31">my personal Github account.</a></p>
      <br/>
      <h2>Resume</h2>
-     <p><a href='Byers Resume 2020.pdf'>You can download a copy of my resume here.</a></p>
+     <p><a href='Byers Resume 2020.pdf'>You can download a pdf copy of my resume here.</a></p>
   
      <!--Bootstrap JS-->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
