--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      <h1>Morgan Byers</h1>
      <br/>
      <h2>Contact:</h2>
-     <p><strong>email <strong> <a href="mailto:m_byers@txstate.edu">m_byers@txstate.edu</a></p>
+     <p><strong>email </strong> <a href="mailto:m_byers@txstate.edu">m_byers@txstate.edu</a></p>
      <br/>
      <h2>Portfolio:</h2>
      <p>Most of my time is spent working on projects for my classes or for the IMICS lab at Texas State University. If you are a Texas State student or faculty member, you may <a href="https://git.txstate.edu/meb298">access the work that I do on behalf of Texas State here.</a></p>
