Added page regions

--- a/index.html
+++ b/index.html
@@ -14,29 +14,40 @@
    </head>
 
    <body>
-     <div class="head">
-       <h1><a href="https://mbyers31.github.io">Morgan Byers</a></h1>
-       <br/>
-       <h2>Contact:</h2>
-       <p>
-         <strong>email </strong> <a href="mailto:m_byers@txstate.edu">m_byers@txstate.edu</a>
-       </p>
-       <br/>
-     </div>
-     <div class="works">
-       <h2>Portfolio:</h2>
-       <p>
-         Most of my time is spent working on projects for my classes or for the IMICS lab at Texas State University. If you are a Texas State student or faculty 
-         member, you may <a href="https://git.txstate.edu/meb298">access the work that I do on behalf of Texas State here.</a>
-       </p>
-       <p>
-         In my free time, I work on scraps of projects here and there. You can find my personal work on <a href="https://github.com/mbyers31">my personal Github 
-         account.</a>
-       </p>
-       <br/>
-       <h2>Resume</h2>
-       <p><a href='Byers Resume 2020.pdf'>You can download a pdf copy of my resume here.</a></p>
-     </div>
+     <header>
+       <div class="head">
+         <center>
+         <h1><a href="https://mbyers31.github.io">Morgan Byers</a></h1>
+         <br/>
+         <h2>Contact</h2>
+         <p>
+           <strong>email </strong> <a href="mailto:m_byers@txstate.edu">m_byers@txstate.edu</a>
+         </p>
+         <br/>
+         </center>
+       </div>
+     </header>
+     <main>
+       <div class="works">
+         <h2>Portfolio:</h2>
+         <p>
+           Most of my time is spent working on projects for my classes or for the IMICS lab at Texas State University. If you are a Texas State student or faculty 
+           member, you may <a href="https://git.txstate.edu/meb298">access the work that I do on behalf of Texas State here.</a>
+         </p>
+         <p>
+           In my free time, I work on scraps of projects here and there. You can find my personal work on <a href="https://github.com/mbyers31">my personal Github 
+           account.</a>
+         </p>
+         <br/>
+         <h2>Resume</h2>
+         <p><a href='Byers Resume 2020.pdf'>You can download a pdf copy of my resume here.</a></p>
+       </div>
+     </main>
+     <footer>
+       <div class="footer">
+         <small>Last updated January 04, 2021</small>
+       </div>
+     </footer>
   
      <!--Bootstrap JS-->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
