--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
      <title>Morgan Byers</title>
    </head>
 
-   <body>
+   <body data-spy="scroll" data-target="#navbar-main">
      <header>
-       <div class="head" name="top">
+       <div class="head" id="top">
          <center>
          <h1><a href="https://mbyers31.github.io">Morgan Byers</a></h1>
          <br/>
@@ -37,13 +37,13 @@
        </div>
      </header>
      
-     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Main Navigation">
+     <nav id="navbar-main" class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Main Navigation">
        <a class="navbar-brand" href="#top">Menu</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="navbar-nav mr-auto">
+         <ul class="nav-pills">
            <li class="nav-item active">
              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
            </li>
@@ -54,15 +54,11 @@
              <a class="nav-link" href="#cv">CV</a>
            </li>
          </ul>
-         <form class="form-inline my-2 my-lg-0">
-           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-         </form>
        </div>
      </nav>
      
      <main>
-       <div class="works" name="work">
+       <div class="works" id="work">
          <h2>Portfolio:</h2>
          <p>
            Most of my time is spent working on projects for my classes or for the IMICS lab at Texas State University. If you are a Texas State student or faculty 
@@ -73,7 +69,7 @@
            account.</a>
          </p>
          <br/>
-         <h2 name="cv">Resume</h2>
+         <h2 id="cv">Resume</h2>
          <p><a href='Byers Resume 2020.pdf'>You can download a pdf copy of my resume here.</a></p>
        </div>
      </main>
