Created an about section

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
      </header>
      
      <nav id="navbar-main" class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Main Navigation">
-       <a class="navbar-brand" href="#top">Menu</a>
+       <a class="navbar-brand" href="#top">Home</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="nav-pills">
+         <ul class="nav nav-pills">
            <li class="nav-item active">
-             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+             <a class="nav-link" href="#about">About Me</a>
            </li>
            <li class="nav-item">
              <a class="nav-link" href="#work">My Work</a>
@@ -58,6 +58,26 @@
      </nav>
      
      <main>
+       <div class="about" id="about">
+         <h2>About Me</h2>
+         <p>
+           First things first, thanks for bearing with me while I work on making my website look good. I'm a programmer, not a designer ¯\_(ツ)_/¯
+         </p>
+         <p>
+           Currently I am a senior undergraduate at Texas State University. In May 2021 I will graduate with a Bachelor of Science in Computer Science and 
+           Mathematics (what a mouthfull). Upon completion of my degree, I intend to continue my education in pursuit of a Ph.D. in Computer Science. My 
+           graduate school applications have been submitted and I'm currently waiting to hear back. 
+         </p>
+         <p>
+           Although I'm early in my research career, my current interests include machine learning and natural language processing. If you're interested in 
+           learning more about my ongoing research endeavors, you're in luck! I will be presenting my early reslts at the AAAI21 Undergraduate Consortium on 
+           February 02, 2021. An extended abstract of my work will also be published in the conference proceedings. 
+         </p>
+         <p>
+           In my free time I like to read, play video games and hang out with my cat, Frank. Right now I'm reading <i>A Tale for the Time Being</i> by Ruth 
+           Ozeki, my first book of 2021! On my reading list this year are <i>Mind Hunter</i>, <i>Where the Crawdads Sing</i>, and <i>The Invisible Life of Addie LaRue</i>. If you 
+           have any book recommendations, please send them to me! You would make my day. 
+         </p>
        <div class="works" id="work">
          <h2>Portfolio:</h2>
          <p>
