--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
      <link href="custom.css" rel="stylesheet">
 
      <title>Morgan Byers</title>
+     <link rel="shortcut icon" type="image/jpg" href="images/logo_black_icon.ico"/>
    </head>
 
    <body data-spy="scroll" data-target="#navbar-main">
