Fixed version compatibility

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
      <link href="custom.css" rel="stylesheet">
 
      <title>Morgan Byers</title>
-     <link rel="shortcut icon" type="image/jpg" href="images/logo_black_icon.ico"/>
+     <link rel="shortcut icon" type="image/jpg" href="images/logo_black.png"/>
    </head>
 
-   <body data-spy="scroll" data-target="#navbar-main">
+   <body data-bs-spy="scroll" data-bs-target="#navbar-main">
      <header>
        <div class="head" id="top">
          <center>
@@ -40,7 +40,7 @@
      
      <nav id="navbar-main" class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Main Navigation">
        <a class="navbar-brand" href="#top">Home</a>
-       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
        <div class="collapse navbar-collapse" id="navbarSupportedContent">
