Fixed inconsistent spacing

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
    <body data-bs-spy="scroll" data-bs-target="#navbar-main">
      
-     <nav id="navbar-main" class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Main Navigation">
-       <a class="navbar-brand" href="#top"><img src="images/logo_black.png" alt="" width="30" height="24"></a>
+     <nav id="navbar-main" class="navbar navbar-expand-lg navbar-dark" style="background-color: #525252" aria-label="Main Navigation">
+       <a class="navbar-brand" href="#top"><img src="images/logo_transparent.png" alt="" class="nav-logo" width="35" height="35"></a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
@@ -49,7 +49,6 @@
        <div class="head" id="top">
          <center>
          <h1>Morgan Byers</h1>
-         <br/>
          <p>
            <strong>email: </strong> <a href="mailto:m_byers@txstate.edu">m_byers@txstate.edu</a>
          </p>
@@ -79,6 +78,7 @@
            Ozeki, my first book of 2021! On my reading list this year are <i>Mind Hunter</i>, <i>Where the Crawdads Sing</i>, and <i>The Invisible Life of Addie LaRue</i>. If you 
            have any book recommendations, please send them to me! You would make my day. 
          </p>
+         <br/>
        <div class="works" id="work">
          <h2>Portfolio</h2>
          <p>
