--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
    <body data-bs-spy="scroll" data-bs-target="#navbar-main">
      
      <nav id="navbar-main" class="navbar navbar-expand-lg navbar-dark" style="background-color: #525252" aria-label="Main Navigation">
-       <a class="navbar-brand" href="#top"><img src="images/logo_transparent.png" alt="" class="nav-logo" width="35" height="35"></a>
+       <a class="navbar-brand" href="#top"><img src="images/logo_transparent.png" alt="home" class="nav-logo" width="40" height="40"></a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
        </button>
@@ -64,19 +64,17 @@
            First things first, thanks for bearing with me while I work on making my website look good. I'm a programmer, not a designer ¯\_(ツ)_/¯
          </p>
          <p>
-           Currently I am a senior undergraduate at Texas State University. In May 2021 I will graduate with a Bachelor of Science in Computer Science and 
-           Mathematics (what a mouthfull). Upon completion of my degree, I intend to continue my education in pursuit of a Ph.D. in Computer Science. My 
-           graduate school applications have been submitted and I'm currently waiting to hear back. 
+           Currently I am a senior undergraduate at Texas State University. In May 2021 I will graduate summa cum laude with a Bachelor of Science in Computer Science and 
+           Mathematics. After graduation, I will be attending the University of Colorado in pursuit of my Masters of Science in Computer Science. 
          </p>
          <p>
-           Although I'm early in my research career, my current interests include machine learning and natural language processing. If you're interested in 
-           learning more about my ongoing research endeavors, you're in luck! I will be presenting my early reslts at the AAAI21 Undergraduate Consortium on 
-           February 04, 2021. An extended abstract of my work will also be published in the conference proceedings. 
+           Although I'm early in my research career, my current interests include machine learning and natural language processing. Currently I'm researching 
+           the applications of topological data analysis to natural language processing problems. My Honors thesis entitled "The Hidden Shape of Data: Topological 
+           Data Analysis for Anxiety Detection in Text" will be published through the Texas State University Honors College very soon. 
          </p>
          <p>
-           In my free time I like to read, play video games and hang out with my cat, Frank. Right now I'm reading <i>A Tale for the Time Being</i> by Ruth 
-           Ozeki, my first book of 2021! On my reading list this year are <i>Mind Hunter</i>, <i>Where the Crawdads Sing</i>, and <i>The Invisible Life of Addie LaRue</i>. If you 
-           have any book recommendations, please send them to me! You would make my day. 
+           In my free time I like to read, play video games and hang out with my cat, Frank. Right now I'm reading <i>The Testaments</i> by Margaret Atwood. On my 
+           reading list this year are <i>Mind Hunter</i> and <i>Sleeping Giants</i>. If you have any book recommendations, please send them to me! You would make my day. 
          </p>
          <br/>
        <div class="works" id="work">
@@ -91,12 +89,13 @@
          </p>
          <br/>
          <h2 id="cv">Resume</h2>
-         <p><a href='Byers Resume 2020.pdf'>You can download a pdf copy of my resume here.</a></p>
+         <p><a href='Byers Resume 2020.pdf'>You can download a pdf copy of my resume here.</a> Please note that my resume is currently a few months out of date. 
+           I'm in the process of updating it between studing for finals and wrapping up projects.</p>
        </div>
      </main>
      <footer>
        <div class="footer">
-         <small>Last updated January 08, 2021</small>
+         <small>Last updated April 24, 2021</small>
        </div>
      </footer>
   
