--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
    <body data-bs-spy="scroll" data-bs-target="#navbar-main">
      
-     <nav id="navbar-main" class="navbar navbar-expand-lg navbar-dark" style="background-color: #525252" aria-label="Main Navigation">
+     <nav id="navbar-main" class="navbar navbar-expand-lg navbar-light" style="background-color: #E6DEDB" aria-label="Main Navigation">
        <a class="navbar-brand" href="#top"><img src="images/logo_transparent.png" alt="home" class="nav-logo" width="40" height="40"></a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
          <center>
          <h1>Morgan Byers</h1>
          <p>
-           <strong>email: </strong> <a href="mailto:m_byers@txstate.edu">m_byers@txstate.edu</a>
+           <strong>email: </strong> morgan.byers@colorado.edu
          </p>
          <br/>
          </center>
@@ -61,41 +61,50 @@
        <div class="about" id="about">
          <h2>About Me</h2>
          <p>
-           First things first, thanks for bearing with me while I work on making my website look good. I'm a programmer, not a designer ¯\_(ツ)_/¯
+           Currently, I am persuing a Master of Science in computer science at the University of Colorado. In May 2021, I graduated with a Bachelor of Science in computer science and 
+           mathematics from Texas State University. My undergraduate thesis was entitled, "The Hidden Shape of Data: Topological Data Analysis for Anxiety Detection in Text," and can 
+           be accessed online via the <a href="https://digital.library.txstate.edu/handle/10877/13762">Texas State honors program online thesis library</a>. 
          </p>
          <p>
-           Currently I am a senior undergraduate at Texas State University. In May 2021 I will graduate summa cum laude with a Bachelor of Science in Computer Science and 
-           Mathematics. After graduation, I will be attending the University of Colorado in pursuit of my Masters of Science in Computer Science. 
+           I'm still pretty early on in my research career, but I'm interested in the intersection of topological data analysis (TDA) and natural language processing. I'm currently
+           exploring the ways in which we can harness topological tools to probe word embedding models. I believe studying the topology of these embedding spaces can elucidate
+           ways in which these models understand language. 
          </p>
          <p>
-           Although I'm early in my research career, my current interests include machine learning and natural language processing. Currently I'm researching 
-           the applications of topological data analysis to natural language processing problems. My Honors thesis entitled "The Hidden Shape of Data: Topological 
-           Data Analysis for Anxiety Detection in Text" will be published through the Texas State University Honors College very soon. 
+           While I was at Texas State, I also had the privilege of being the Digital Product Developer for the student-led newspaper, <a href="https://www.universitystar.com/">The 
+           University Star</a>. In this role, I oversaw the management of all of The Star's digital assets, including the management and design of the website and app. I assisted 
+           with overhauling the Star's website and ensuring that the new site was WCAG 2.0 compliant. In spring 2021, I earned second place in overall web design at the Texas 
+           Intercollegiate Press Association (TIPA). 
          </p>
          <p>
-           In my free time I like to read, play video games and hang out with my cat, Frank. Right now I'm reading <i>The Testaments</i> by Margaret Atwood. On my 
-           reading list this year are <i>Mind Hunter</i> and <i>Sleeping Giants</i>. If you have any book recommendations, please send them to me! You would make my day. 
+           In my free time I like to read, play video games and hang out with my cat, Frank. Since moving to Boulder for grad school, I've also been spending a ton of time hiking, 
+           biking, and generall enjoying the outdoors. 
          </p>
          <br/>
        <div class="works" id="work">
          <h2>Portfolio</h2>
          <p>
-           Most of my time is spent working on projects for my classes or for the IMICS lab at Texas State University. If you are a Texas State student or faculty 
-           member, you may <a href="https://git.txstate.edu/meb298">access the work that I do on behalf of Texas State here.</a>
-         </p>
-         <p>
            In my free time, I work on scraps of projects here and there. You can find my personal work on <a href="https://github.com/mbyers31">my personal Github 
            account.</a>
+         </p>
+         <p>
+           I spent most of my undergraduate career working on projects for class or for my work at the IMICS lab. If you are a Texas State student or faculty 
+           member, you may <a href="https://git.txstate.edu/meb298">access the work that I did on behalf of Texas State here.</a>
          </p>
          <br/>
          <h2 id="cv">Resume</h2>
          <p><a href='Byers Resume 2020.pdf'>You can download a pdf copy of my resume here.</a> Please note that my resume is currently a few months out of date. 
-           I'm in the process of updating it between studing for finals and wrapping up projects.</p>
+           I'm in the process of updating it.
+         </p>
+         <h2>Publications</h2>
+         <p>Visit <a href="https://scholar.google.com/citations?user=z_773PsAAAAJ&hl=en"my Google Scholar page</a> to view an up-to-date list of my publications.</p>
+         <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-9854-8386" href="https://orcid.org/0000-0002-9854-8386" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;">
+           <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0002-9854-8386</a></div>
        </div>
      </main>
      <footer>
        <div class="footer">
-         <small>Last updated April 24, 2021</small>
+         <small>Last updated September 26, 2021</small>
        </div>
      </footer>
   
