--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
              <a class="nav-link" href="#work">My Work</a>
            </li>
            <li class="nav-item">
+             <a class="nav-link" href="#pub">Publications</a>
+           </li>
+           <li class="nav-item">
              <a class="nav-link" href="#cv">CV</a>
            </li>
          </ul>
@@ -92,14 +95,16 @@
            member, you may <a href="https://git.txstate.edu/meb298">access the work that I did on behalf of Texas State here.</a>
          </p>
          <br/>
+         <h2 id="pub">Publications</h2>
+         <p>Visit <a href="https://scholar.google.com/citations?user=z_773PsAAAAJ&hl=en"my Google Scholar page</a> to view an up-to-date list of my publications.</p>
+         <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-9854-8386" href="https://orcid.org/0000-0002-9854-8386" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;">
+           <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0002-9854-8386</a></div>
+         <br />
          <h2 id="cv">Resume</h2>
          <p><a href='Byers Resume 2020.pdf'>You can download a pdf copy of my resume here.</a> Please note that my resume is currently a few months out of date. 
            I'm in the process of updating it.
          </p>
-         <h2>Publications</h2>
-         <p>Visit <a href="https://scholar.google.com/citations?user=z_773PsAAAAJ&hl=en"my Google Scholar page</a> to view an up-to-date list of my publications.</p>
-         <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-9854-8386" href="https://orcid.org/0000-0002-9854-8386" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;">
-           <img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0002-9854-8386</a></div>
+         <br />
        </div>
      </main>
      <footer>
