--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
    <body data-bs-spy="scroll" data-bs-target="#navbar-main">
      
-     <nav id="navbar-main" class="navbar navbar-expand-lg navbar-light" style="background-color: #E6DEDB" aria-label="Main Navigation">
+     <nav id="navbar-main" class="navbar navbar-expand-lg navbar-light" style="background-color: #E7D6E1" aria-label="Main Navigation">
        <a class="navbar-brand" href="#top"><img src="images/logo_transparent.png" alt="home" class="nav-logo" width="40" height="40"></a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
