--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
             <div id="spacer"></div>
             <h2>About Me</h2>
             <p>
-                I am currently a second-year MS student studying computer science at the University of Colorado. In 2021 I recieved my Bachelor of Science in computer science and mathematics from Texas State University. My undergraduate thesis was entitled, "The Hidden Shape of Data: Topological Data Analysis for Anxiety Detection in Text," and can be accessed online via the <a href="https://digital.library.txstate.edu/handle/10877/13762">Texas State honors program online thesis library</a>.
+                I am currently a thir-year Ph.D. student studying computer science under Dr. Liz Bradley at the University of Colorado, Boulder. In 2021 I recieved my Bachelor of Science in computer science and mathematics from Texas State University. My undergraduate thesis was entitled, "The Hidden Shape of Data: Topological Data Analysis for Anxiety Detection in Text," and can be accessed online via the <a href="https://digital.library.txstate.edu/handle/10877/13762">Texas State honors program online thesis library</a>.
             </p>
             <p>
-                Very broadly, my research interests lie in the area of topological data analysis (TDA) for time-evolving metric spaces. A deeper description of my research can be found under my <a href="#work">Portfolio</a> section. I am currently applying for the NSF graduate research fellowship. After completing my Masters degree I plan to continue on to a Ph.D., likely also from the University of Colorado.
+                Very broadly, my research interests lie in the area of topological data analysis (TDA) for time-evolving metric spaces. A deeper description of my research can be found under my <a href="#work">Portfolio</a> section. After completing my Ph.D., I hope to stay on in academia as a professor.
             </p>
             <p>
                 While I was at Texas State, I also had the privilege of being the Digital Product Developer for the student-lead newspaper, <a href="https://www.universitystar.com/"> The University Star </a>. In this role, I oversaw the management of all of The Star's digital assets, including the management and design of the website and app. I assisted with overhauling the Star's website and ensuring that the new site was WCAG 2.0 compliant. In spring 2021, I earned second place in overall web design at the Texas Intercollegiate Press Association (TIPA).
             </p>
             <p>
-                I enjoy spending any free time I have as far away from technology as possible. My hobbies include reading (especially high fantasy), watercolor, hiking, and trying out new baking recipes. A fun fact about myself is that I can recite the first fourty one digits of pi from memory.
+                I enjoy spending any free time I have as far away from technology as possible. My hobbies include reading, crochet, aerial acrobatics, and trying out new baking recipes. A fun fact about myself is that I can recite the first fourty one digits of pi from memory.
             </p>
         </div>
-        <div id="bigspacer"></div>
+        <div id="spacer"></div>
         <div class = "works" id = "works">
             <h2>Portfolio</h2>
             <p>
@@ -81,7 +81,17 @@
             <p>
                 For the most up-to-date list of my work, you can refer to my <a href="https://scholar.google.com/citations?user=z_773PsAAAAJ&hl=en">Google Scholar page</a>.
             </p>
-            <h3>Conferences</h3>
+            <h3>Journals</h3>
+            <ul>
+                <li>
+                    G. Gharooni-Fard*, M. Byers*, V. Deshmukh*, E. Bradley, C. Mayo, C. Topaz, and O. Peleg. "A Computational Topology-based Spatiotemporal Analysis Technique for Honeybee Aggregation," <em>Nature Complexity</em>. in press. [Online] available: <a href="https://arxiv.org/abs/2307.09720">https://arxiv.org/abs/2307.09720</a>
+                    <br />
+                    *co-first authors
+                </li>
+                <li>
+                    M. Byers, M. Trahan, E. Nason, C. Eigege, N. Moore, M. Washburn, V. Metsis. "Detecting Intensity of Anxiety in Language of Student Veterans with Social Anxiety Using Text Analysis," <em>Journal of Technology in Human Services</em>, pp. 1 - 21, March 2023. [Online] available: <a href="https://www.tandfonline.com/doi/pdf/10.1080/15228835.2022.2163452">https://www.tandfonline.com/doi/pdf/10.1080/15228835.2022.2163452</a>
+            </ul>
+            <h3>Conference Papers</h3>
             <ul>
                 <li>
                     Byers, M., Metsis, V. (2021). Text Analysis for Understanding Symptoms of Social Anxiety in Student Veterans. In: Proceedings of the AAAI Conference on Artificial Intelligence. Vol. 35. No. 18. 2021.
@@ -104,7 +114,7 @@
         <div id = "cv">
             <h2>Resume</h2>
             <p>
-                My Resume is currently very out of date. When it is updated (soon) I'll post a link to it here. You can also find my work history on <a href="https://www.linkedin.com/in/morgan-byers/">Linkedin</a>.
+                A copy of <a href="misc_files/resume_feb24.pdf">my resume is available here</a>, last updated in February 2024. You can also find my (out-of-date) work history on <a href="https://www.linkedin.com/in/morgan-byers/">Linkedin</a>.
             </p>
         </div>
         <div id = "spacer"></div>
@@ -112,7 +122,7 @@
      
      <footer>
        <div class="footer">
-         <small>Last updated September 11, 2022</small>
+         <small>Last updated February 1, 2024</small>
        </div>
      </footer>
    </body>
