--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/myself.jpeg" alt="Morgan, standing in front of the waterfall at Changi Airport in Singapore. She has blonde hair and is wearing a green dress." /></a>
-					<h1><strong>Morgan Byers</strong></h1>
+                    <center><h1><strong>Morgan Byers</strong></h1></center>
 				</div>
 			</header>
 
@@ -478,7 +478,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<ul class="icons">
 						<li><a href="https://orcid.org/0000-0002-9854-8386" class="icon brands fa-orcid"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/mbyers31" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://www.linkedin.com/in/morgan-byers/" class="icon solid fa-linkedin"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/morgan-byers/" class="icon brands fa-linkedin"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
                         <li>Last updated: June 21, 2024</li>
