--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/myself.jpeg" alt="Morgan, standing in front of the waterfall at Changi Airport in Singapore. She has blonde hair and is wearing a green dress." /></a>
-                    <center><h1><strong>Morgan Byers</strong></h1></center>
+                    <h1><strong>Morgan Byers</strong></h1>
 				</div>
 			</header>
 
@@ -136,7 +136,7 @@
 					<section id="three">
 						<h2>Contact Me</h2>
 						<div class="row">
-							<div class="col-4 col-12-small">
+                            <div class="contact">
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
@@ -148,7 +148,7 @@
 										<a href="#">morgan.byers@colorado.edu</a>
 									</li>
 								</ul>
-							</div>
+                            </div>
 						</div>
 					</section>
 
