add new classes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						</header>
 						<p>I am currently a fourth-year Ph.D. student at the University of Colorado, Boulder. My research interests include the applicaitons of computational topology to time-evolving metric spaces. After completing my Ph.D., I hope to stay on in academia as a professor.</p>
                         <p>In 2021 I recieved my Bachelor of Science in computer science and mathematics from Texas State University. My undergraduate thesis was entitled, "The Hidden Shape of Data: Topological Data Analysis for Anxiety Detection in Text," and can be accessed online via the <a href="https://digital.library.txstate.edu/handle/10877/13762">Texas State honors program online thesis library</a>.</p>
-                        <p> When I'm not working on research, you can usually find me reading a good book, trying out a new baking recipe, or hanging upside down from a lyra, pole, or other aerial apparatus.</p>
+                        <p> When I'm not working on research, you can usually find me reading a good book, trying out a new baking recipe, or hanging upside down from a lyra, silks, or other aerial apparatus.</p>
                         <!--
 						<ul class="actions">
 							<li><a href="#" class="button">See My Publications</a></li>
@@ -77,6 +77,7 @@
 	</header>
     <ul class="alt2">
         <li> <strong>CSCI 2270: Data structures</strong>. Instructor of Record (1 semester)</li>
+	<li> <strong>CSCI 2275: Programming \& Data structures</strong>. TA (1 semester)</li>
         <li> <strong>CSCI 1300: Starting Computing</strong>. TA (3 semesters)</li>
     </ul>
 </section>
@@ -481,7 +482,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://www.linkedin.com/in/morgan-byers/" class="icon brands fa-linkedin"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-                        <li>Last updated: June 21, 2024</li>
+                        <li>Last updated: August 23, 2024</li>
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
