--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	</header>
     <ul class="alt2">
         <li> <strong>CSCI 2270: Data structures</strong>. Instructor of Record (1 semester)</li>
-	<li> <strong>CSCI 2275: Programming \& Data structures</strong>. TA (1 semester)</li>
+	<li> <strong>CSCI 2275: Programming & Data structures</strong>. TA (1 semester)</li>
         <li> <strong>CSCI 1300: Starting Computing</strong>. TA (3 semesters)</li>
     </ul>
 </section>
