--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 	</header>
         <ul class="alt2">
             <li> <strong>Center for Teaching and Learning (CTL) Lead TA</strong> (2024 - 2025)</li>
+	    <li> <strong>Pedagogy Committee Student Representative</strong> (2025 - ongoing)</li>
         </ul>
 </section>
 
