Update website with spring 25 information

--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
                             <h3>Conference Presentations</h3>
                         </header>
                             <ul class="alt2">
+				<li><strong>M. Byers</strong>, E. Garling, E. Bradley, K. A. Gibbs, J. D. Meiss, "The Spatial Dynamics of Proteus Mirabilis Swarming" in SIAM Conference on Applications of Dynamical Systems (DS25), Denver, CO, 2025
+				</li>
+				<li><strong>M. Byers</strong>, J. Chittidi, E. Bradley, M. MacGregor, J. D. Meiss, "Computational Topology Techniques for Detecting Exoplanet Signatures" in Dynamics Days 2025, Denver, CO, 2025.
+				</li>
+				<li><strong>M. Byers</strong>, E. Garling, E. Bradley, K. A. Gibbs, J. D. Meiss, "The Spatiotemporal Dynamics of Proteus Mirabilis Swarming" in Dynamics Days 2025, Denver, CO, 2025.
+				</li>
                                 <li><strong>Byers, M.</strong>, Kirkpatrick, B., Skillin, N., Bradley, E. Topological Data Analysis of Myoblast Self-Assembly. Contributed Talk. SIAM Conference on Applications of Dynamical Systems (DS23). May 2023 (<i>Portland, OR</i>).
                                 </li>
                                 <li><strong>Byers, M.</strong>, Kirkpatrick, B., Skillin, N., Bradley, E. Topological Data Analysis of Myoblast Self-Assembly. Poster. Dynamics Days. Jan. 2023 (<i>virtual</i>).
@@ -96,7 +102,7 @@
 		<h2>Teaching</h2>
 	</header>
     <ul class="alt2">
-        <li> <strong>CSCI 2270: Data structures</strong>. Instructor of Record (1 semester), TA (1 semester)</li>
+        <li> <strong>CSCI 2270: Data structures</strong>. Instructor of Record (2 semesters), TA (1 semester)</li>
 	<li> <strong>CSCI 2275: Programming & Data structures</strong>. TA (1 semester)</li>
         <li> <strong>CSCI 1300: Starting Computing</strong>. TA (3 semesters)</li>
     </ul>
