--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 				</li>
 				<li><strong>M. Byers</strong>, E. Garling, E. Bradley, K. A. Gibbs, J. D. Meiss, "The Spatiotemporal Dynamics of Proteus Mirabilis Swarming" in Dynamics Days 2025, Denver, CO, 2025.
 				</li>
-                                <li><strong>Byers, M.</strong>, Kirkpatrick, B., Skillin, N., Bradley, E. Topological Data Analysis of Myoblast Self-Assembly. Contributed Talk. SIAM Conference on Applications of Dynamical Systems (DS23). May 2023 (<i>Portland, OR</i>).
-                                </li>
-                                <li><strong>Byers, M.</strong>, Kirkpatrick, B., Skillin, N., Bradley, E. Topological Data Analysis of Myoblast Self-Assembly. Poster. Dynamics Days. Jan. 2023 (<i>virtual</i>).
-                                </li>
+                <li><strong>Byers, M.</strong>, Kirkpatrick, B., Skillin, N., Bradley, E. Topological Data Analysis of Myoblast Self-Assembly. Contributed Talk. SIAM Conference on Applications of Dynamical Systems (DS23). May 2023 (<i>Portland, OR</i>).
+                </li>
+                <li><strong>Byers, M.</strong>, Kirkpatrick, B., Skillin, N., Bradley, E. Topological Data Analysis of Myoblast Self-Assembly. Poster. Dynamics Days. Jan. 2023 (<i>virtual</i>).
+                </li>
                             </ul>
                         
 
@@ -113,8 +113,8 @@
 		<h2>Service</h2>
 	</header>
         <ul class="alt2">
+            <li> <strong>Pedagogy Committee Student Representative</strong> (2025 - ongoing)</li>
             <li> <strong>Center for Teaching and Learning (CTL) Lead TA</strong> (2024 - 2025)</li>
-	    <li> <strong>Pedagogy Committee Student Representative</strong> (2025 - ongoing)</li>
         </ul>
 </section>
 
@@ -160,6 +160,7 @@
 						</ul>
 					</section> -->
 
+
 				<!-- Three -->
 					<section id="three">
 						<h2>Contact Me</h2>
@@ -178,7 +179,13 @@
 								</ul>
                             </div>
 						</div>
+
+                        <ul class="actions">
+							<li><a href="misc_files/Byers_CV_Sept2025.pdf" class="button">Extended CV</a></li>
+						</ul>
 					</section>
+
+                
 
 				<!-- Four -->
 				<!--
@@ -509,7 +516,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://www.linkedin.com/in/morgan-byers/" class="icon brands fa-linkedin"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-                        <li>Last updated: August 2025</li>
+                        <li>Last updated: September 2025</li>
 						<li>&copy; Morgan Byers</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
